--- a/root/igniter/assets/css/style.css
+++ b/root/igniter/assets/css/style.css
@@ -15,6 +15,16 @@ body::after{
     position: absolute;
     z-index: -1;   
 }
+.logotip{
+    width: 9vh;
+}
+
+.allButtons{
+    margin: 5px;
+}
+exitMenu{
+    height: 20px;
+}
 .prijavaOdobrena{
     background-color: #C1FFA2;
     margin: 20px;
@@ -40,18 +50,14 @@ body::after{
     color: black;
 }
 .sidenav {
-    height: 100%; 
+    height: 100%;
     width: 0;
     position: fixed; 
-    z-index: 1;
-    top: 0; 
+    z-index: 999;
     left: 0;
     background-color: #374045;
     overflow-x: hidden; 
-    padding-top: 60px;
     transition: 0.5s; 
-    position: absolute;
-    z-index: 10;  
     font-family: 'Poiret One', cursive;
     font-weight: bold;
 }
@@ -59,7 +65,7 @@ body::after{
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: gray;
+    color: black;
     display: block;
     transition: 0.3s;
 }
@@ -68,8 +74,17 @@ body::after{
     font-family: 'Poiret One', cursive;
     font-weight: bold;
 }
+.container-fluid h1,h2,h3,h4{
+    font-family: 'Poiret One', cursive;
+    font-weight: bold;
+}
+
+#userDropdown:hover{
+    stroke: black;
+}
+
 .sidenav a:hover {
-    color: black;
+    color: gray;
 }
 .sidenav .closebtn {
     position: absolute;
@@ -86,7 +101,7 @@ body::after{
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
-nav{
+.navbar{
     background-color: #456268;
     font-weight: bold;
     font-size: 30px;
@@ -113,10 +128,12 @@ nav{
     font-family: 'Varela Round', sans-serif;
 }
 .welcome{
-    color: white;
+    color: black;
+    margin: 5px;
+    font-family: 'Varela Round', sans-serif !important;
 }
 .logout{
-    color: white;
+    color: black;
 }
 .logout:hover{
     color: #374045;
